--- a/rest-server/rest-server/src/main/resources/application.yml
+++ b/rest-server/rest-server/src/main/resources/application.yml
@@ -1,9 +1,10 @@
-# port? 8080(default) ?? 1208? ??
+# port 8080(default) -> 1208
 server:
   port: 1208
 
-# org.springframework ???? ??
-# loggin ???? DEBUG??? ??
+# org.springframework
+# DEBUG-mode log print
 logging:
   level:
     org.springframework: DEBUG
+
