Connect to a H2 Database, and add JPA.

--- a/rest-server/rest-server/src/main/resources/application.yml
+++ b/rest-server/rest-server/src/main/resources/application.yml
@@ -8,3 +8,18 @@ logging:
   level:
     org.springframework: DEBUG
 
+# use: Postman - Authorization - Basic Type
+# Related to access control
+spring:
+  jpa:
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:testdb
+  security:
+    user:
+      name: admin
+      password: admin_password
+
