--- a/rest-server/rest-server/pom.xml
+++ b/rest-server/rest-server/pom.xml
@@ -94,6 +94,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- zxing -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+
+		<!-- json -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
