--- a/rest-server/rest-server/src/main/resources/application.yml
+++ b/rest-server/rest-server/src/main/resources/application.yml
@@ -13,13 +13,17 @@ logging:
 spring:
   jpa:
     show-sql: true
+    database: h2
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
   datasource:
+    driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
-  security:
-    user:
-      name: admin
-      password: admin_password
+    username: sa
 
+#  security:
+#    user:
+#      name: admin
+#      password: admin_password
