--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.5.0'
     implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.5.0'
 
+    // QR
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
+    implementation 'com.google.zxing:core:3.4.1'
 }
