--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app_cocomo">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_cocomo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_cocomo_foreground"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.App_cocomo">
-
-        <activity android:name=".IntroActivity"
+        android:theme="@style/Theme.App_cocomo"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".auth.qr.QrActivity"></activity>
+        <activity
+            android:name=".IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,11 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".JoinActivity"/>
-        <activity android:name=".HomeActivity"/>
-        <activity android:name=".JoinOkActivity"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".JoinActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".JoinOkActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
     </application>
+
 </manifest>
