--- a/rest-server/rest-server/pom.xml
+++ b/rest-server/rest-server/pom.xml
@@ -110,6 +110,13 @@
 			<version>1.1</version>
 		</dependency>
 
+		<!-- JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
